# gnihon

./: .gitignore  pyproject.toml  tests.txt
gnihon/: main.py
gnihon/xml/: jmdict.py
tests/resources/: JMdict.xml
tests/xml/: test_jmdict.py
